# general-etl

./: Cargo.toml  LICENSE
config/examples/: README.md  api_to_csv_example.json  complex_zip_processing.json  csv_transform_example.json  database_to_json_example.json
src/: lib.rs  main.rs
src/config/: settings.rs
src/extractors/: api_client.rs  file_reader.rs  mod.rs
src/loaders/: archiver.rs  csv_writer.rs  mod.rs
src/models/: data_types.rs
src/pipeline/: mod.rs  orchestrator.rs
src/transformers/: mod.rs  processor.rs
src/utils/: error.rs
