[package]
name = "general-etl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-config"
path = "src/bin/test_config.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
zip = "5.1"
flate2 = "1.1"
anyhow = "1.0"
thiserror = "2.0"
config = "0.15"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
surrealdb = { version = "2.3.8", features = ["kv-mem"] }

# 資料處理
rayon = "1.11"  # 平行處理
dashmap = "6.1"  # 併發安全的 HashMap

# 命令列介面
clap = { version = "4.5", features = ["derive"] }

# 日期時間處理
chrono = { version = "0.4", features = ["serde"] }

# 進度條
indicatif = "0.18"

# 重試機制
backoff = { version = "0.4", features = ["tokio", "futures"] }
